tests/custom-sysy2022/positive/c030_scope_shadow_2.sy
const int A = 5;
int main() {
  int x = A;
  {
    const int A = 5 + 1;
    x = x + A;
    {
      int A = 5 + 2;
      x = x + A;
    }
    x = x + A;
  }
  putint(x);
  putch(10);
  return 0;
}
