tests/custom-sysy2022/negative/c109_neg_sem_03.sy
int main() {
  const int a = 1;
  a = 2;
  return a;
}
